@@ -1,5 +1,7 @@
 Revision history for Perl extension File-Find-Rule-Perl
 
+  - Fix no_index regression with absolute paths
+
 1.06 Mon 13 Apr 2009
 	- Upgraded to Module::Install 0.82 (ADAMK)
         - Additional test (without new) (Alexandr Ciornii)
